Add get family endpoint
